--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
